# gemini-mcp

./: .gitignore  Dockerfile  README.md  __init__.py  health_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  server.py  start.sh  test_gemini_server.py  tsconfig.json
src/: index.ts
